--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="No contacts found. Add a new contact."
+        android:text="@string/no_contacts"
         android:textSize="16sp"
         android:visibility="gone" />
 
