--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/nav_contacts"
             android:icon="@android:drawable/ic_menu_myplaces"
-            android:title="Contacts" />
+            android:title="@string/menu_contacts" />
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
