--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,6 +31,9 @@
         <action
             android:id="@+id/action_nav_contacts_to_contactFormFragment"
             app:destination="@id/contactFormFragment" />
+        <action
+            android:id="@+id/action_nav_contacts_to_messageFragment"
+            app:destination="@id/messageFragment" />
     </fragment>
     
     <fragment
@@ -38,4 +41,10 @@
         android:name="com.example.ft_hangouts.ui.contacts.ContactFormFragment"
         android:label="Add/Edit Contact"
         tools:layout="@layout/fragment_contact_form" />
+        
+    <fragment
+        android:id="@+id/messageFragment"
+        android:name="com.example.ft_hangouts.ui.message.MessageFragment"
+        android:label="Messages"
+        tools:layout="@layout/fragment_message" />
 </navigation>
