--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -46,5 +46,10 @@
         android:id="@+id/messageFragment"
         android:name="com.example.ft_hangouts.ui.message.MessageFragment"
         android:label="Messages"
-        tools:layout="@layout/fragment_message" />
+        tools:layout="@layout/fragment_message">
+        <argument
+            android:name="contact"
+            app:argType="com.example.ft_hangouts.model.Contact"
+            app:nullable="true" />
+    </fragment>
 </navigation>
