--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -13,13 +13,14 @@
         android:orientation="horizontal"
         android:padding="16dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/contact_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@mipmap/ic_launcher_round"
-            app:civ_border_color="#FFFFFF"
-            app:civ_border_width="2dp" />
+            android:scaleType="centerCrop"
+            android:background="@drawable/circle_background"
+            android:padding="2dp" />
 
         <LinearLayout
             android:layout_width="0dp"
