--- a/app/src/main/res/drawable/send_button_background.xml
+++ b/app/src/main/res/drawable/send_button_background.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/design_default_color_primary" />
+    <solid android:color="@color/accent_medium" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/accent_light" />
 </shape>
