--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,5 +8,9 @@
             android:id="@+id/nav_contacts"
             android:icon="@android:drawable/ic_menu_myplaces"
             android:title="@string/menu_contacts" />
+        <item
+            android:id="@+id/nav_messages"
+            android:icon="@android:drawable/ic_dialog_email"
+            android:title="@string/menu_messages" />
     </group>
 </menu>
