--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,6 +19,19 @@
     </fragment>
     
     <fragment
+        android:id="@+id/nav_messages"
+        android:name="com.example.ft_hangouts.ui.message.ConversationsFragment"
+        android:label="Messages"
+        tools:layout="@layout/fragment_conversations">
+        <action
+            android:id="@+id/action_nav_messages_to_contactSelectorFragment"
+            app:destination="@id/contactSelectorFragment" />
+        <action
+            android:id="@+id/action_nav_messages_to_messageFragment"
+            app:destination="@id/messageFragment" />
+    </fragment>
+    
+    <fragment
         android:id="@+id/contactFormFragment"
         android:name="com.example.ft_hangouts.ui.contacts.ContactFormFragment"
         android:label="Add/Edit Contact"
@@ -33,5 +46,15 @@
             android:name="contact"
             app:argType="com.example.ft_hangouts.model.Contact"
             app:nullable="true" />
+    </fragment>
+    
+    <fragment
+        android:id="@+id/contactSelectorFragment"
+        android:name="com.example.ft_hangouts.ui.message.ContactSelectorFragment"
+        android:label="Select Contact"
+        tools:layout="@layout/fragment_contact_selector">
+        <action
+            android:id="@+id/action_contactSelectorFragment_to_messageFragment"
+            app:destination="@id/messageFragment" />
     </fragment>
 </navigation>
